@@ -1,3 +1,8 @@
+2009-09-04 Magnus Hagdorn
+ * doc/Makefile.am: only build figures if documentation is built
+ * libglimmer/Makefile.am: forgot to the ncdf template
+ * libglimmer/solve/Makefile.am: add sparse matrix handler
+
 2009-09-03 Magnus Hagdorn
  * libglimmer/Makefile.am: add targets for libglimmer-IO.a
 
